[gd_scene load_steps=14 format=3 uid="uid://cwml2cl88ghoa"]

[ext_resource type="Script" path="res://Objects/main_menu.gd" id="1_ir266"]
[ext_resource type="Texture2D" uid="uid://d276u8qp3fgyn" path="res://Assets/Textures/BEB_Logo.png" id="2_04m2e"]
[ext_resource type="PackedScene" uid="uid://csrmwnawy2ykl" path="res://Objects/3dBackgroundMainMenu.tscn" id="2_xm8d4"]
[ext_resource type="Texture2D" uid="uid://bt6kve3l30p31" path="res://Assets/sprite-bass-idle-training.png" id="3_qfa3v"]
[ext_resource type="Texture2D" uid="uid://bhb3td6mjc0r3" path="res://Assets/sprite-bass-idle.png" id="4_6fgcy"]
[ext_resource type="Texture2D" uid="uid://vmexaogg6k5s" path="res://Assets/sprite-snare-swing.png" id="4_ygsiv"]
[ext_resource type="Texture2D" uid="uid://dsfvw3qbonaca" path="res://Assets/sprite-bass-swing.png" id="5_6qu60"]
[ext_resource type="Texture2D" uid="uid://c2huetnkmkx1d" path="res://Assets/sprite-snare-idle-noequip-training.png" id="6_tg4s2"]
[ext_resource type="Texture2D" uid="uid://djlbopvwghant" path="res://Assets/sprite-snare-idle.png" id="7_048n6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5gluh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qfa3v")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_6fgcy")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_6qu60")
}],
"loop": true,
"name": &"swing",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_31is6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_tg4s2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_048n6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ygsiv")
}],
"loop": true,
"name": &"swing",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_6to0w"]
resource_name = "Highlight"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharLeft:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.426, 0.426), Vector2(0.47, 0.47)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharLeft2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.285, 0.285), Vector2(0.33, 0.33)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_40ofj"]
_data = {
"Highlight": SubResource("Animation_6to0w")
}

[node name="MainMenu" type="Control"]
custom_minimum_size = Vector2(2.91, 0)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -117.0
offset_right = -18.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_ir266")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_left = -410.5
offset_top = -211.5
offset_right = -370.5
offset_bottom = -171.5

[node name="SubViewport" parent="SubViewportContainer" instance=ExtResource("2_xm8d4")]
own_world_3d = true
handle_input_locally = false
size = Vector2i(960, 540)
render_target_update_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.5
offset_top = -35.0
offset_right = 116.5
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits
"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Logo" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(59.5, -147)
scale = Vector2(0.311596, 0.295533)
texture = ExtResource("2_04m2e")

[node name="CharLeft" type="AnimatedSprite2D" parent="."]
position = Vector2(354, 49.5)
rotation = -0.0698132
scale = Vector2(0.426, 0.426)
sprite_frames = SubResource("SpriteFrames_5gluh")
animation = &"idle"
speed_scale = 2.0

[node name="CharLeft2" type="AnimatedSprite2D" parent="."]
position = Vector2(-228.381, 67.2482)
rotation = 0.0349066
scale = Vector2(0.285, 0.285)
sprite_frames = SubResource("SpriteFrames_31is6")
animation = &"idle"
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_40ofj")
}
speed_scale = 2.0

[connection signal="focus_entered" from="VBoxContainer/Start" to="." method="_on_start_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/Start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Start" to="." method="_on_start_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="focus_entered" from="VBoxContainer/Exit" to="." method="_on_exit_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Exit" to="." method="_on_exit_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
